--- a/.github/workflows/devbox.yml
+++ b/.github/workflows/devbox.yml
@@ -16,7 +16,7 @@ jobs:
 
       - run: echo "${{ hashFiles(format('{0}/devbox.lock', '.')) }}"
 
-      - uses: ./.github/actions/devbox
+      - uses: jetify-com/devbox-install-action@v0.12.0
         with:
           enable-cache: 'true'
 
